[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "openai>=1.93.0",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "pygithub>=2.6.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
    "trafilatura>=2.0.0",
]
